<resources>
    <string name="app_name">Tawi</string>
    <string name="browse_category">Browse Category</string>
    <string name="nairobi">Nairobi</string>
    <string name="skip">Skip</string>
    <string name="sell">Sell</string>
    <string name="buy_and_sell_your">Buy and Sell Your</string>
    <string name="africa_logo">Africa logo</string>
    <string name="product">Product</string>
    <string name="vegetables">Vegetable</string>
    <string name="fruits">Fruits</string>
    <string name="cereals">Cereals</string>
    <string name="dairy">Dairy</string>
    <string name="eggs">Eggs</string>
    <string name="meat">Meat</string>
    <string name="farm_products">Farm Products</string>
    <string name="seeds">Seeds</string>
    <string name="pesticides">Pesticides</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="pick_category">Pick Category</string>
    <string name="food_marketplace">Food marketplace</string>
    <string name="enter_message">Enter Message</string>
    <string name="upload_image">Upload Image</string>
    <string name="update_image">update image</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="countrywide">Countrywide</string>
    <string name="popular">Popular</string>
    <string name="view_all">View All</string>
    <string name="farm_marketplace">Farm Marketplace</string>
    <string name="tawi">Tawi</string>
    <string name="sellers_information">Sellers Information</string>
    <string name="date_of_registration">Date of Registration:</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="choose_category">Choose Category</string>
    <string name="sell_your_item">Sell Your Item</string>
    <string name="upload_images">Upload Images</string>
    <string name="title">Title</string>
    <string name="describe_your_item">Describe your item</string>
    <string name="location">Location</string>
    <string name="post">Post</string>
    <string name="price">Price</string>
    <string name="additional_information">Additional Information</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_listings">My Listings</string>
    <string name="verified">Verified</string>
    <string name="account_successfully_verified">Account successfully verified</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="todo">TODO</string>
    <string name="no_internet_connection_found_please_connect_then_try_again">No internet connection found.Please connect then try again</string>
    <string name="retry">RETRY</string>
</resources>