<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    android:paddingTop="100dp"
    android:gravity="center_horizontal"
    tools:context=".SuccessActivity">

    <LinearLayout
        android:background="@drawable/success_bg"
        android:padding="40dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"

        >

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/todo" />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verified"
            android:textSize="18sp"
            />
        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/account_successfully_verified"
            />
        <Button
            android:textColor="@color/white"
            android:id="@+id/successBtnDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_dashboard"
            app:backgroundTint="@color/green"
            />



    </LinearLayout>


</LinearLayout>