<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editProfileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Edit Profile"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileToolbar">
        <TextView
            android:id="@+id/tvupload"
            android:text="@string/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/ic_user"
            app:civ_circle_background_color="@color/grey"
            app:civ_border_color="@color/grey"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
           android:layout_below="@+id/tvupload"
            android:id="@+id/editProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
             />

        <Button
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editProfileImage"
            app:backgroundTint="@color/green"
            android:id="@+id/btnUpdateImg"
            android:text="@string/update_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <LinearLayout
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/editProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_bg"
                android:hint="@string/email"
               android:padding="10dp"
                app:backgroundTint="@color/material_on_primary_disabled" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                android:id="@+id/editProfileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_bg"
                android:padding="10dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:backgroundTint="@color/material_on_primary_disabled">

            <EditText
                android:id="@+id/editProfileLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_bg"
                android:hint="@string/location"
                android:inputType="text"
                android:padding="10dp"
                android:autofillHints="" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:visibility="gone"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinUpload"
        app:SpinKit_Color="@color/green"

        app:layout_constraintBottom_toTopOf="@+id/layoutUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="100"
        android:id="@+id/layoutUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:baselineAligned="false">
        <LinearLayout
            android:background="@drawable/green_bg"
            app:backgroundTint="@color/green"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button

                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:background="@drawable/green_bg"
                app:backgroundTint="@color/green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

        <LinearLayout
            android:background="@color/grey"
            app:backgroundTint="@color/green"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@color/black"
                android:id="@+id/btnCancelEdit"
                android:text="@string/cancel"
                android:background="@drawable/green_bg"
                app:backgroundTint="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>