<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_green"
    tools:context=".SignupFragment">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/signUp"
        android:padding="14dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/orange"
            app:startIconTint="@color/orange"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:padding="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/orange"
            app:startIconTint="@color/orange"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:hint="@string/email"
                android:padding="10dp"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_defaultNameCode="KE"
                app:ccp_textSize="12sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:boxStrokeColor="@color/orange"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="@color/orange"
                app:startIconTint="@color/orange"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:padding="10dp"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/orange"
            app:startIconTint="@color/orange"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:padding="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textStyle="bold"
            app:backgroundTint="@color/green"


            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bg"
        />


</LinearLayout>