<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:paddingBottom="3dp"
        android:background="@color/green"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerHorizontal="true"
                app:tint="@color/orange"
                android:src="@drawable/ic_africa"
                android:layout_marginTop="15dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView

                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:padding="5dp"
                android:text="@string/tawi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




        </RelativeLayout>




    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
        android:layout_above="@id/bottomNavView"
        android:layout_below="@+id/appbar"
        android:id="@+id/nes"
        android:fillViewport="true"
        android:background="@color/light"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.ybq.android.spinkit.SpinKitView
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:id="@+id/spinKit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:SpinKit_Color="@color/green"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linFood"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:text="@string/food_marketplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    />

                <TextView
                    android:id="@+id/viewFood"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/view_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/mainFoodRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/linFarm"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:text="@string/farm_marketplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                />

                <TextView
                    android:id="@+id/viewFarm"
                    android:textAlignment="textEnd"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:text="@string/view_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/mRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                />




        </LinearLayout>


    </androidx.core.widget.NestedScrollView>





    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:background="@color/light_green"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/viewpage_bg"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintHeader"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/mainCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:src="@drawable/ic_cancel"
                android:text="@string/skip"
                android:textColor="@color/orange"
                android:textSize="16sp"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.971"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/orange" />

            <ImageView
                android:id="@+id/circleImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/orange"

                android:src="@drawable/ic_africa"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.499"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19"
                android:contentDescription="@string/africa_logo" />

            <LinearLayout
                android:id="@+id/titleDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingStart="20dp"
                app:layout_constraintVertical_bias="0"
                android:paddingBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView"
                android:paddingEnd="20dp"
                android:paddingTop="0dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_and_sell_your"
                    android:textColor="@color/white"
                    android:textSize="15sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textColor="@color/white"
                    android:textSize="13sp"

                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="142dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bg"

                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/titleDesc"
                app:tabIndicatorColor="@color/white"
                app:tabRippleColor="@color/green"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                >
                <com.google.android.material.tabs.TabLayout

                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/top_bg"

                    app:tabIndicatorColor="@color/white"
                    app:tabRippleColor="@color/green"
                    app:tabTextColor="@color/green"


                    />

            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.viewpager.widget.ViewPager

            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintHeader"

            app:layout_constraintVertical_bias="0"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>




            <com.google.android.material.bottomnavigation.BottomNavigationView
               android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:id="@+id/bottomNavView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemHorizontalTranslationEnabled="false"
                android:layout_gravity="bottom"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/menu_nav"

                app:itemTextColor="@color/bottom_nav_color"
                app:itemIconTint="@color/bottom_nav_color"/>



</RelativeLayout>